--- a/PropWare/xmmc/CMakeLists.txt
+++ b/PropWare/xmmc/CMakeLists.txt
@@ -30,6 +30,7 @@ add_library(${PROJECT_NAME} STATIC
         ../seeedtftfast_as.S
         ../spi
         ../spi_as.S
+        ../synchronousprinter
         ../uart/abstractduplexuart
         ../uart/abstractsimplexuart
         ../uart/duplexuart
