--- a/Examples/CMakeLists.txt
+++ b/Examples/CMakeLists.txt
@@ -3,6 +3,7 @@ add_subdirectory(Concurrency)
 add_subdirectory(Hello)
 add_subdirectory(Libpropeller_Pwm32)
 add_subdirectory(PropWare_DuplexUART)
+add_subdirectory(PropWare_FatFS)
 add_subdirectory(PropWare_HD44780)
 add_subdirectory(PropWare_L3G)
 add_subdirectory(PropWare_MAX6675)
@@ -11,7 +12,6 @@ add_subdirectory(PropWare_MultiCogBlinky)
 add_subdirectory(PropWare_Queue)
 add_subdirectory(PropWare_Runnable)
 add_subdirectory(PropWare_Scanner)
-#add_subdirectory(PropWare_SD)
 add_subdirectory(PropWare_SeeedTFT)
 add_subdirectory(PropWare_SimplexUART)
 add_subdirectory(PropWare_Simple_Hybrid)
