--- a/libpropeller/source/cog/CMakeLists.txt
+++ b/libpropeller/source/cog/CMakeLists.txt
@@ -1,17 +1,9 @@
 cmake_minimum_required (VERSION 3.0.0)
 
-if (NOT DEFINED PROPWARE_PATH)
-    file(TO_CMAKE_PATH $ENV{PROPWARE_PATH} PROPWARE_PATH)
-endif ()
-
 set(COMMON_FLAGS "-Os")
 set(C_FLAGS )
 set(CXX_FLAGS )
 set(MODEL cog)
 
-project(Libpropeller_${MODEL})
-include(../libpropellerObjects.cmake)
-
-include(${PROPWARE_PATH}/CMakePropellerSetFlags.cmake)
-include_directories(${PROPWARE_PATH})
-add_library(${PROJECT_NAME} STATIC ${LIBPROPELLER_OBJECTS})
+include(${PROJECT_SOURCE_DIR}/CMakePropellerSetFlags.cmake)
+add_library(Libpropeller_${MODEL} STATIC ${LIBPROPELLER_OBJECTS})
