--- a/external_libs/lmm/CMakeLists.txt
+++ b/external_libs/lmm/CMakeLists.txt
@@ -4,8 +4,8 @@ set(MODEL lmm)
 set_compile_flags()
 
 add_library(Libpropeller_${MODEL} STATIC ${LIBPROPELLER_OBJECTS})
+set_linker(Libpropeller_${MODEL})
 install(TARGETS Libpropeller_${MODEL}
     DESTINATION PropWare/lib
     COMPONENT propware
     EXPORT PropWare-targets)
-
