--- a/external_libs/xmm-split/CMakeLists.txt
+++ b/external_libs/xmm-split/CMakeLists.txt
@@ -4,6 +4,7 @@ set(MODEL xmm-split)
 set_compile_flags()
 
 add_library(Libpropeller_${MODEL} STATIC ${LIBPROPELLER_OBJECTS})
+set_linker(Libpropeller_${MODEL})
 install(TARGETS Libpropeller_${MODEL}
     DESTINATION PropWare/lib
     COMPONENT propware
