--- a/PropWare/models/lmm/CMakeLists.txt
+++ b/PropWare/models/lmm/CMakeLists.txt
@@ -4,7 +4,8 @@ set(MODEL lmm)
 set_compile_flags()
 
 add_library(PropWare_${MODEL} STATIC ${PROPWARE_SOURCES})
+set_target_properties(PropWare_${MODEL} PROPERTIES OUTPUT_NAME PropWare)
 install(TARGETS PropWare_${MODEL}
-    DESTINATION PropWare/lib
+    DESTINATION PropWare/lib/${MODEL}
     COMPONENT propware
     EXPORT PropWare-targets)
