--- a/test/PropWare/CMakeLists.txt
+++ b/test/PropWare/CMakeLists.txt
@@ -12,12 +12,14 @@ create_test(stringbuilder_test      stringbuilder_test)
 create_test(queue_test              queue_test)
 create_test(utility_test            utility_test)
 create_test(spi_test                spi_test)
+create_test(eeprom_test             eeprom_test)
 
 set_tests_properties(
     sample_test
     stringbuilder_test
     queue_test
     utility_test
+    eeprom_test
     PROPERTIES LABELS hardware-independent)
 
 install(FILES PropWareTests.h
