--- a/site.yml
+++ b/site.yml
@@ -3,6 +3,6 @@ type: tools|libraries
 links:
   Documentation: http://david.zemon.name/PropWare/
   Forum Thread: http://forums.parallax.com/showthread.php/157005-FYI-PropWare-Complete-build-system-and-library-for-PropGCC
-  Issue Tracker: https://github.com/DavidZemon/PropWare/issues
-  Source Code: https://github.com/DavidZemon/PropWare
+  Issue Tracker: https://github.com/parallaxinc/PropWare/issues
+  Source Code: https://github.com/parallaxinc/PropWare
   Build Server: http://david.zemon.name:8111/project.html?projectId=PropWare&tab=projectOverview&guest=1
