--- a/CMakeCPackOptions.cmake.in
+++ b/CMakeCPackOptions.cmake.in
@@ -5,7 +5,7 @@
 if (CPACK_GENERATOR MATCHES "ZIP")
     set(CPACK_COMPONENTS_ALL_IN_ONE_PACKAGE OFF)
     set(CPACK_COMPONENTS_IGNORE_GROUPS ON)
-    set(CPACK_COMPONENTS_ALL propware examples win_cmake cmake osx_cmake)
+    set(CPACK_COMPONENTS_ALL propware examples win_cmake cmake osx_cmake standalone-cmake)
 elseif (CPACK_GENERATOR MATCHES "NSIS")
     set(CPACK_COMPONENTS_ALL propware examples win_cmake win_spin2cpp)
 elseif (CPACK_GENERATOR MATCHES "DEB")
