--- a/test/PropWare/CMakeLists.txt
+++ b/test/PropWare/CMakeLists.txt
@@ -13,6 +13,7 @@ create_test(queue_test              queue_test)
 create_test(utility_test            utility_test)
 create_test(spi_test                spi_test)
 create_test(eeprom_test             eeprom_test)
+create_test(ping_test               ping_test)
 
 set_tests_properties(
     sample_test
@@ -20,6 +21,7 @@ set_tests_properties(
     queue_test
     utility_test
     eeprom_test
+    ping_test
     PROPERTIES LABELS hardware-independent)
 
 install(FILES PropWareTests.h
