--- a/CMakeModules/CMakeSPIN2DATCompiler.cmake.in
+++ b/CMakeModules/CMakeSPIN2DATCompiler.cmake.in
@@ -1,4 +1,4 @@
-set(CMAKE_SPIN2DAT_COMPILER "@SPIN2CPP_COMMAND@")
+set(CMAKE_SPIN2DAT_COMPILER "@CMAKE_SPIN2DAT_COMPILER@")
 set(CMAKE_SPIN2DAT_COMPILER_ARG1 "@CMAKE_C_COMPILER_ARG1@")
 set(CMAKE_SPIN2DAT_COMPILER_ID "@CMAKE_C_COMPILER_ID@")
 set(CMAKE_SPIN2DAT_COMPILER_VERSION "@CMAKE_C_COMPILER_VERSION@")
