--- a/Examples/CMakeLists.txt
+++ b/Examples/CMakeLists.txt
@@ -12,6 +12,7 @@ add_subdirectory(PropWare_HD44780)
 add_subdirectory(PropWare_I2C)
 add_subdirectory(PropWare_L3G)
 add_subdirectory(PropWare_MAX6675)
+add_subdirectory(PropWare_MCP2515)
 add_subdirectory(PropWare_MCP3xxx)
 add_subdirectory(PropWare_MultiCogBlinky)
 add_subdirectory(PropWare_PCF8591)
