--- a/PropWare/CMakeLists.txt
+++ b/PropWare/CMakeLists.txt
@@ -29,6 +29,7 @@ set(PROPWARE_SOURCES
     ${CMAKE_CURRENT_LIST_DIR}/sensor/distance/ping.h
     ${CMAKE_CURRENT_LIST_DIR}/sensor/gyroscope/l3g.h
     ${CMAKE_CURRENT_LIST_DIR}/sensor/temperature/max6675.h
+    ${CMAKE_CURRENT_LIST_DIR}/serial/can/mcp2515.h
     ${CMAKE_CURRENT_LIST_DIR}/serial/i2c/i2c.cpp
     ${CMAKE_CURRENT_LIST_DIR}/serial/i2c/i2c.h
     ${CMAKE_CURRENT_LIST_DIR}/serial/i2c/i2cbase.h
