--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -26,6 +26,11 @@ add_subdirectory(test)
 
 find_package(Doxygen)
 if (DOXYGEN_FOUND)
+    set(TEAMCITY_BUILD_ID "$ENV{TEAMCITY_BUILD_ID}")
+    configure_file(${PROJECT_SOURCE_DIR}/docs/Download.md.in
+        ${PROJECT_SOURCE_DIR}/docs/Download.md
+        @ONLY)
+    set_directory_properties(PROPERTIES ADDITIONAL_MAKE_CLEAN_FILES ${PROJECT_SOURCE_DIR}/docs/Download.md)
     add_custom_target(docs
         "${DOXYGEN_EXECUTABLE}" Doxyfile
         WORKING_DIRECTORY "${PROJECT_SOURCE_DIR}")
